[gd_scene load_steps=13 format=3 uid="uid://ibmgxjl33jn8"]

[ext_resource type="Script" path="res://core/ui/menu/settings/settings_menu.gd" id="1_olmbp"]
[ext_resource type="Theme" uid="uid://bko0q7gp1hwjp" path="res://assets/themes/dracula.tres" id="2_7txcp"]
[ext_resource type="PackedScene" uid="uid://orey8uxm7v6v" path="res://core/systems/state/visibility_manager.tscn" id="2_364oy"]
[ext_resource type="PackedScene" uid="uid://dp4knr1strui4" path="res://core/systems/state/state_manager.tscn" id="2_fpxtd"]
[ext_resource type="Resource" uid="uid://d3gp85f35oiw6" path="res://assets/state/states/settings.tres" id="3_5g7v4"]
[ext_resource type="PackedScene" uid="uid://df5o1o2dsik84" path="res://core/ui/components/button.tscn" id="3_11sf6"]
[ext_resource type="Resource" uid="uid://e7bbebwf7guj" path="res://assets/state/states/main_menu.tres" id="4_cyj3i"]
[ext_resource type="PackedScene" uid="uid://cbybmmt7bigkt" path="res://core/ui/menu/settings/plugin_store_menu.tscn" id="4_dx1s7"]
[ext_resource type="PackedScene" uid="uid://cd5txkd83wntb" path="res://core/systems/state/state_changer.tscn" id="5_art7k"]
[ext_resource type="Resource" uid="uid://bmgs1ngma1523" path="res://assets/state/states/in_game_menu.tres" id="5_tny5o"]
[ext_resource type="Resource" uid="uid://bp807nlks8eq1" path="res://assets/state/states/quick_access_menu.tres" id="6_fyuji"]
[ext_resource type="PackedScene" uid="uid://cfk55ufy6luqt" path="res://core/ui/menu/settings/plugin_settings_menu.tscn" id="6_tmsre"]

[node name="SettingsMenu" type="Control" groups=["settings_menu"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_olmbp")

[node name="VisibilityManager" parent="." instance=ExtResource("2_364oy")]
state = ExtResource("3_5g7v4")
visible_during = [ExtResource("4_cyj3i"), ExtResource("5_tny5o"), ExtResource("6_fyuji")]

[node name="StateManager" parent="." instance=ExtResource("2_fpxtd")]

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_7txcp")

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuMarginContainer" type="MarginContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/MenuMarginContainer"]
layout_mode = 2

[node name="GeneralButton" parent="MainContainer/MenuMarginContainer/VBoxContainer" instance=ExtResource("3_11sf6")]
layout_mode = 2
text = "General"

[node name="StateChanger" parent="MainContainer/MenuMarginContainer/VBoxContainer/GeneralButton" instance=ExtResource("5_art7k")]
signal_name = "focus_entered"
state = 1
action = 2
state_manager_path = "../../../../../StateManager"

[node name="HSeparator" type="HSeparator" parent="MainContainer/MenuMarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PluginsButton" parent="MainContainer/MenuMarginContainer/VBoxContainer" instance=ExtResource("3_11sf6")]
layout_mode = 2
text = "Plugins"

[node name="StateChanger" parent="MainContainer/MenuMarginContainer/VBoxContainer/PluginsButton" instance=ExtResource("5_art7k")]
signal_name = "focus_entered"
state = 2
action = 2
state_manager_path = "../../../../../StateManager"

[node name="PluginStoreButton" parent="MainContainer/MenuMarginContainer/VBoxContainer" instance=ExtResource("3_11sf6")]
layout_mode = 2
text = "Plugin Store"

[node name="StateChanger" parent="MainContainer/MenuMarginContainer/VBoxContainer/PluginStoreButton" instance=ExtResource("5_art7k")]
signal_name = "focus_entered"
state = 3
action = 2
state_manager_path = "../../../../../StateManager"

[node name="ContentMarginContainer" type="MarginContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PluginSettings" parent="MainContainer/ContentMarginContainer" instance=ExtResource("6_tmsre")]
layout_mode = 2
state_manager_path = NodePath("../../../StateManager")

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/ContentMarginContainer"]
layout_mode = 2
follow_focus = true

[node name="PluginStore" parent="MainContainer/ContentMarginContainer/ScrollContainer" instance=ExtResource("4_dx1s7")]
visible = false
layout_mode = 2
state_manager_path = NodePath("../../../../StateManager")
